# telos-agent

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  cobertura.xml  pyproject.toml
cli/: .telos.toml  Cargo.toml  NOTICE  README.md
cli/docs/superpowers/plans/: 2026-06-22-python-textual-tui-implementation-plan.md
cli/docs/superpowers/specs/: 2026-06-22-python-textual-tui-design.md
cli/python/: README.md  pyproject.toml
cli/python/telos_tui/: __init__.py  __main__.py  app.py  backend.py  event_loop.py  protocol.py  state.py  streaming.py  styles.tcss  transcript.py
cli/src/: approval.rs  billing.rs  cli.rs  codeql_runtime.rs  config.rs  context.rs  diagnostics.rs  interactive_input.rs  lib.rs  main.rs  memory_runtime.rs  onboarding.rs  project.rs  repl.rs  runner.rs  serve.rs  session.rs  terminal.rs  update_check.rs
cli/src/config/: load.rs  merge.rs  mod.rs  provider.rs  types.rs
cli/src/interaction/: approval.rs  onboarding.rs
cli/src/runtime/: memory.rs  mod.rs
cli/src/tui/: app.rs  approval.rs  chat.rs  chat_entry.rs  chat_panel.rs  chat_widget.rs  command_popup.rs  composer.rs  event.rs  history_cell.rs  input_panel.rs  keymap.rs  markdown.rs  mod.rs  overlay.rs  render.rs  run.rs  selection_popup.rs  spawn.rs  status.rs  status_bar.rs  theme.rs  tool_activity.rs  turn.rs  user_input_popup.rs
cli/src/tui/app/: commands.rs  (+10 more)
cli/src/workspace/: context.rs  project.rs
cli/tests/: cli_tests.rs
cli/tests/python_tui/: fake_backend.py  test_backend.py  test_protocol.py  test_smoke.py  test_transcript.py
core/: Cargo.toml
core/src/: approval.rs  config.rs  diagnostics.rs  error.rs  lib.rs  message.rs  metrics.rs  mock.rs  permissions.rs  storage.rs
core/src/bash_security/: mod.rs  prefix.rs  quote_context.rs
core/src/code_index/: mod.rs
core/src/codeql/: config.rs  database.rs  mod.rs  sarif.rs  section.rs  tool.rs
core/src/compaction/: history_summary.rs  history_summary_prompt.md  message.rs  message_truncation.rs  mod.rs  strategy.rs
core/src/event_channel/: mod.rs
core/src/executor/: batch.rs  invoke.rs  mod.rs  stream.rs  sync.rs  tests.rs  types.rs
core/src/frontend/: context.rs  memory_runtime.rs  runtime.rs
core/src/hooks/: http.rs  prompt.rs
core/src/mcp/: client.rs
core/src/memory/: format.rs  index.rs  mod.rs  profile.rs
core/src/plugin/: errors.rs  hook_loader.rs  manifest.rs  mod.rs  tool_loader.rs
core/src/powershell_security/: aliases.rs  dangerous_cmdlets.rs  mod.rs  parser.rs  static_prefix.rs
core/src/prompt/: assembly.rs  builtins.rs  mod.rs  section.rs
core/src/provider/: deepseek.rs  mod.rs  openai_compat.rs  routed.rs  test.rs  traits.rs  types.rs
core/src/runtime/: compaction_phase.rs  memory_injection.rs  mod.rs  persistence.rs  provider_call.rs  session.rs  skill_injection.rs  tool_phase.rs  turn.rs
core/src/skills/: loader.rs  registry.rs
core/src/subagent/: builtins.rs  definition.rs  fork.rs  mod.rs  registry.rs  tool.rs  worktree.rs
core/src/tasks/: mod.rs  persistence.rs  task.rs
core/src/tool/: mod.rs  validate.rs
core/src/tools/: ask_user_question.rs  browser.rs  code_index.rs  domain_filter.rs  enter_plan_mode.rs  exit_plan_mode.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  memory.rs  mod.rs  powershell.rs  python.rs  send_user_message.rs  shared.rs  shell.rs  skill.rs  tasks.rs  team_create.rs  team_delete.rs  todo_write.rs  web_fetch.rs  web_search.rs
core/tests/: integration_tests.rs  memory_tests.rs  runtime_tests.rs  skill_prompt_tests.rs  storage_tests.rs  subagent_plugin_tests.rs  tool_filesystem_tests.rs  tool_permission_tests.rs  tool_powershell_tests.rs  tool_registry_prompt_tests.rs  tool_shell_tests.rs  tool_web_tests.rs
core/tests/common/: mod.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: runtime-manifest.json
desktop/src-tauri/src/: agent_host.rs  desktop_event.rs  lib.rs  main.rs  tauri_app.rs
host/: Cargo.toml  README.md
host/src/: context.rs  lib.rs  memory_runtime.rs  options.rs  runtime.rs
host/src/config/: provider.rs
runtime/: Cargo.toml  README.md
runtime/src/: approval.rs  config.rs  context.rs  diagnostics.rs  error.rs  lib.rs  memory_runtime.rs  message.rs  permissions.rs  project.rs  runtime.rs  storage.rs
runtime/src/agent/: mod.rs
runtime/src/bash_security/: prefix.rs  quote_context.rs  substitution.rs
runtime/src/compaction/: history_summary.rs  history_summary_prompt.md  mod.rs  test_summary.txt
runtime/src/config/: merge.rs  provider.rs  types.rs
runtime/src/event_channel/: mod.rs
runtime/src/frontend/: memory_runtime.rs  mod.rs
runtime/src/hooks/: http.rs
runtime/src/integrations/: mod.rs
runtime/src/knowledge/: mod.rs
runtime/src/mcp/: client.rs  manager.rs
runtime/src/memory/: index.rs  mod.rs
runtime/src/model/: message.rs  mock.rs  mod.rs
runtime/src/orchestration/: mod.rs
runtime/src/plugin/: hook_loader.rs  manifest.rs  marketplace.rs
runtime/src/powershell_security/: analyzer.rs  path_validation.rs  read_only.rs
runtime/src/prompt/: assembly.rs  section.rs
runtime/src/provider/: mod.rs  test.rs  traits.rs  types.rs
runtime/src/runtime/: hook_phase.rs  input.rs  memory_injection.rs  mod.rs  persistence.rs  provider_call.rs  tool_phase.rs
runtime/src/skills/: loader.rs
runtime/src/subagent/: definition.rs  fork.rs  mod.rs  worktree.rs
runtime/src/tools/: approval.rs  exit_plan_mode.rs  file_read.rs  file_write.rs  grep.rs  mod.rs  permissions.rs  powershell.rs  python.rs  skill.rs  team_create.rs  team_delete.rs  todo_write.rs  web_fetch.rs
runtime/tests/: memory_tests.rs  task_lifecycle_tests.rs  tool_shell_tests.rs
runtime/tests.bak/: skill_prompt_tests.rs  tool_permission_tests.rs  tool_powershell_tests.rs
runtime/tests/common/: mod.rs
telos-cli/: Cargo.toml  README.md
telos-cli/src/: approval.rs  cli.rs  config.rs  display.rs  lib.rs  project.rs  runner.rs
telos-cli/tests/: cli_tests.rs
(+487 files in other folders)
