[package]
name = "tiny_agent_core"
version = "0.1.0"
edition = "2024"
description = "A lightweight, provider-agnostic LLM agent runtime with pluggable tools, streaming, and session persistence"
license = "MIT"
repository = "https://github.com/future-re/tiny_agent_core"
readme = "README.md"
keywords = ["llm", "agent", "ai", "tool-use"]
categories = ["development-tools", "api-bindings", "asynchronous"]
rust-version = "1.96"

[dependencies]
async-openai = { version = "0.41", default-features = true, features = ["chat-completion"] }
async-stream = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
futures-core = "0.3"
futures-util = "0.3"
glob = "0.3"
jsonschema = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "process",
    "sync",
    "time",
] }
tracing = "0.1"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
