[package]
name = "telos-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Terminal interface for telos-agent"
repository = "https://github.com/future-re/telos-agent"
readme = "README.md"
default-run = "telos"

[[bin]]
name = "telos"
path = "src/main.rs"

[lib]
name = "telos_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
dirs = "5"
futures-util = "0.3"
glob = "0.3"
rpassword = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
toml = "0.8"
telos_agent = { version = "0.1.0", path = "../core" }
telos_runtime = { package = "telos-runtime", path = "../runtime" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
