[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telos-tui"
dynamic = ["version"]
description = "Textual TUI frontend for telos-agent"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["agent", "ai", "cli", "llm", "terminal", "tui", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]

dependencies = [
    "textual>=0.60,<2",
]

[project.scripts]
telos-tui = "telos_tui.__main__:main"

[project.urls]
Repository = "https://github.com/future-re/telos-agent"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "telos_tui.__version__"}
