[package]
name = "telos-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Desktop client for telos-agent"
repository = "https://github.com/future-re/telos-agent"

[lib]
name = "telos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
dirs = "6"
dunce = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telos_agent = { path = "../../core" }
telos_cli = { package = "telos-cli", path = "../../cli" }
tokio = { version = "1", features = ["sync"] }
toml = "0.8"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3"
